fix: Wrap news-title with Link

--- a/src/components/newsCard.scss
+++ b/src/components/newsCard.scss
@@ -47,6 +47,11 @@
     padding: 25px 15px;
     text-align: left;
 
+    a {
+      text-decoration: none;
+      color: #000;
+    }
+
     .news-title {
       text-transform: capitalize;
       font-weight: bold;
